Eliminati mapper, e fix