@@ -2,7 +2,6 @@ package com.betacom.dischi.services.implementations;
 
 import java.time.LocalDate;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.slf4j.Logger;
 import org.springframework.stereotype.Service;
@@ -18,7 +17,7 @@ import com.betacom.dischi.repository.IProdottoRepository;
 import com.betacom.dischi.repository.IRecensioneRepository;
 import com.betacom.dischi.request.RecensioneRequest;
 import com.betacom.dischi.services.interfaces.RecensioneService;
-import com.betacom.dischi.utilities.mapper.MapperClienteToDTO;
+import com.betacom.dischi.utilities.Utility;
 import static com.betacom.dischi.utilities.Utility.buildRecensioneDTO;
 
 @Service
@@ -45,7 +44,7 @@ public class RecensioneImpl implements RecensioneService {
 	    List<Recensione> listaRecensioni = recensioneRepo.filteredReviews(idRecensione, stelle); 
 	    return listaRecensioni.stream()
 	            .map(rece -> buildRecensioneDTO(rece))
-	            .collect(Collectors.toList());
+	            .toList();
 	}
 	
 	
@@ -117,14 +116,13 @@ public class RecensioneImpl implements RecensioneService {
 			throw new CustomException("Il numero di stelle deve essere un valore tra 1 e 5");
 		}
 	}
+	
 	@Override
 	public RecensioneDTO listById(Integer id) throws CustomException {
 	    Recensione recensione = recensioneRepo.findById(id)
 	            .orElseThrow(() -> new CustomException("Recensione non trovata"));
-	    List<RecensioneDTO> recensioneCliente = MapperClienteToDTO.mapRecensioni(recensione.getCliente()).stream()
-	            .filter(rece -> rece.getIdRecensione().equals(id)) 
-	            .collect(Collectors.toList()); 
-	    RecensioneDTO recensioneFiltrata = recensioneCliente.get(0);
-	    return recensioneCliente.isEmpty() ? null : recensioneFiltrata;
+	    RecensioneDTO recensioneDTO = Utility.buildRecensioneDTO(recensione);  
+	    return recensioneDTO;
 	}
+
 }
